server/compilers/goLiteJS/src/test/ml2/valid/predecl5.go
// shadowing pre-declared mappings
package main

var true int = 23
