server/compilers/goLiteJS/src/test/ml2/invalid/decl5.go
// variable declared twice, same
package main

var a int
var a int
